follow directory changes.

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 #nav {
 	color:			white;
-	background:		url('img/navbg.jpg');
+	background:		url('images/navbg.jpg');
 	height:			1.5em;
 }
 #nav ul {
