--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@
 }
 #nav {
 	color:			white;
-	background:		url('images/navbg.jpg');
+	background:		url('../images/navbg.jpg');
 	height:			1.5em;
 }
 #nav ul {
