--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,84 @@
 	margin: 5px;
 }
 
+/*-----吹き出し-----*/
+/* balloon common */
+div.balloon-wrapper {
+	width: 500px;
+	margin: 15px auto;
+}
+div.balloon-wrapper::after {
+	clear: both;
+	content: "";
+	display: block;
+	line-height: 0;
+}
+p.balloon-left,
+p.balloon-right {
+	position: relative;
+	z-index: 1;
+	max-width: 80%;
+	min-width: 10%;
+	margin: 15px auto;
+	padding: 13px;
+	background-color: #fff;
+	border-width: 3px;
+	border-style: solid;
+	border-radius: 10px;
+}
+p.balloon-left::before,
+p.balloon-right::before {
+	content: "";
+	display: block;
+	position: absolute;
+	z-index: 10;
+	top: 10px;
+	width:  0;
+	height: 0;
+	border: 15px solid transparent;
+}
+p.balloon-left::after,
+p.balloon-right::after {
+	content: "";
+	display: block;
+	position: absolute;
+	z-index: 100;
+	top: 10px;
+	width:  0;
+	height: 0;
+	border: 15px solid transparent;
+}
+
+/* balloon left */
+p.balloon-left {
+/*	float: left;*/
+	float: right;
+	border-color: #8d8;
+}
+p.balloon-left::before {
+	left: -31px;
+	border-right: 15px solid #8d8;
+}
+p.balloon-left::after {
+	left: -26px;
+	border-right: 15px solid #fff;
+}
+
+/* balloon right */
+p.balloon-right {
+/*	float: right;*/
+	float: left;
+	border-color: #aad;
+}
+p.balloon-right::before {
+	right: -31px;
+	border-left: 15px solid #aad;
+}
+p.balloon-right::after {
+	right: -26px;
+	border-left: 15px solid #fff;
+}
+
 /* */
 #header {
 	position:		fixed;
