change background in a navigator bar.

--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ label {
 }
 #nav {
 	color:			white;
-	background:		url('../images/navbg.jpg');
+	background-color:	rgb(233, 141, 57);
 	height:			1.5em;
 }
 #nav ul {
