--- a/css/style.css
+++ b/css/style.css
@@ -322,12 +322,12 @@ h2.none {
 	border-bottom-style:	none;
 }
 h2, h3 {
-	border-color:		#5D88E6;
 	border-bottom-style:	solid;
 	border-bottom-width:	1px;
 	border-left-style:	solid;
 	border-left-width:	10px;
 	padding-left:		5px;
+	color:			rgb(233, 141, 57);
 }
 /* */
 a {
