--- a/css/style.css
+++ b/css/style.css
@@ -338,11 +338,9 @@ a {
 a:hover {
 	background-color:	#ADD8E6;	/* light blue */
 }
-a:link {
-	color:			#4169E1;	/* royal blue */
-}
+a:link,
 a:visited {
-	color:			#000080;	/* navy */
+	color:			#4169E1;	/* royal blue */
 }
 /* */
 u.dashed {
