include a user link in the navigation bar.

--- a/css/style.css
+++ b/css/style.css
@@ -245,11 +245,12 @@ label {
 	visibility:		hidden;
 	content:		".";
 }
-#logo {
-	float:			left;
-}
 #user {
 	float:			right;
+	color:			white;
+}
+#user a {
+	color:			white;
 }
 #nav {
 	color:			white;
