--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,11 @@ body {
 	padding:		0;
 	background-color:	#FFFFFF;
 }
+/* XXX: should be for QuickHTML only... */
+form table {
+	margin:			0 auto;
+	max-width:		80%;
+}
 /* */
 p.remark {
 	/* margins of top and bottom are inherited. */
