--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,8 @@ p.balloon-right::after {
 	content:		".";
 }
 #header {
+	position:		fixed;
+	z-index:		2147483647;
 	top:			0;
 	width:			100%;
 	margin:			0;
@@ -200,7 +202,7 @@ p.balloon-right::after {
 	vertical-align:		middle;
 }
 #main {
-	position:		relative;
+	margin-top:		6em;
 	padding:		1em;
 }
 #menu {
