--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,16 @@ p.balloon-right::after {
 	margin-top:		6em;
 	padding:		1em;
 }
+.container {
+	border:			2px solid rgb(233, 141, 57);
+	border-radius:		5px;
+}
+.container-header {
+	padding:		0;
+	margin:			0;
+	color:			white;
+	background-color:	rgb(233, 141, 57);
+}
 #menu {
 	float:			left;
 	width:			10%;
