--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
 @charset "utf-8";
 
+/* tab */
+#tabs .ui-state-active {
+	border:			1px solid rgb(233, 141, 57);
+	background:		rgb(233, 141, 57);
+}
+/* list */
 img.list-pic {
 	width:			200px;
 }
@@ -7,10 +13,6 @@ img.list-pic {
 #view-feedback {
 	float:			left;
 	width:			480px;
-}
-#view-map {
-	float:			left;
-	margin-left:		5%;
 }
 #view-address {
 	float:			left;
